# gsoc-2018-jderobot-application

./: .gitignore  README.md
ConwayGOF/: ConwayGoF.py  config.json  main.py
Labyrinth/: CLabyrinth.cpp  CLabyrinth.h  CMakeLists.txt  input.txt  main.cpp  output.txt
demo/: README.md
demo/ompl_gui/: CMakeLists.txt  mainpage.dox  package.xml
demo/ompl_gui/include/ompl_gui/: main_window.hpp  qnode.hpp
demo/ompl_gui/src/: main.cpp  main_window.cpp  qnode.cpp
demo/ompl_gui/ui/: main_window.ui
demo/path_planning_ompl/: CMakeLists.txt  OptimalPlanning.py  package.xml  setpath.rviz
